--- a/Unidad01/04/Calculadora/Calc18100149.html
+++ b/Unidad01/04/Calculadora/Calc18100149.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,45 +19,45 @@
 
             <br>
 
-            <input type="button" value="%">
-            <input type="button" value="√">
-            <input type="button" value="x²">
-            <input type="button" value="1/x">
+            <input type="button" class="Azul" value="%">
+            <input type="button" class="Azul" value="√">
+            <input type="button" class="Azul" value="x²">
+            <input type="button" class="Azul" value="1/x">
 
             <br>
 
-            <input type="button" value="CE">
-            <input type="button" value="C">
-            <input type="button" value="B">
-            <input type="button" value="/">
+            <input type="button" class="Verde" value="CE">
+            <input type="button" class="Verde" value="C">
+            <input type="button" class="Verde" value="B">
+            <input type="button" class="Azul" value="/">
 
             <br>
 
-            <input type="button" value="7">
-            <input type="button" value="8">
-            <input type="button" value="9">
-            <input type="button" value="x">
+            <input type="button" class="Gris" value="7">
+            <input type="button" class="Gris" value="8">
+            <input type="button" class="Gris" value="9">
+            <input type="button" class="Gris" value="x">
 
             <br>
 
-            <input type="button" value="4">
-            <input type="button" value="5">
-            <input type="button" value="6">
-            <input type="button" value="-">
+            <input type="button" class="Gris" value="4">
+            <input type="button" class="Gris" value="5">
+            <input type="button" class="Gris" value="6">
+            <input type="button" class="Azul"  value="-">
 
             <br>
 
-            <input type="button" value="1">
-            <input type="button" value="2">
-            <input type="button" value="3">
-            <input type="button" value="+">
+            <input type="button" class="Gris"value="1">
+            <input type="button" class="Gris" value="2">
+            <input type="button" class="Gris" value="3">
+            <input type="button" class="Azul" value="+">
 
             <br>
 
-            <input type="button" value="±">
-            <input type="button" value="0">
-            <input type="button" value=".²">
-            <input type="button" value="=">
+            <input type="button" class="Verde" value="±">
+            <input type="button" class="Gris" value="0">
+            <input type="button" class="Azul" value=".">
+            <input type="button" class="Verde" value="=">
 
         </form>
     </div>
