--- a/Unidad01/04/Calculadora/Calc18100149.html
+++ b/Unidad01/04/Calculadora/Calc18100149.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Estilo.css">
+    <script defer src="Calc18100149.js"></script>
     <title>Document</title>
 </head>
 <body id="body">
@@ -19,50 +20,50 @@
 
             <br>
 
-            <input type="button" class="Azul" value="%">
-            <input type="button" class="Azul" value="√">
-            <input type="button" class="Azul" value="x²">
-            <input type="button" class="Azul" value="1/x">
+            <input type="button" name="data" class="Azul" value="H">
+            <input type="button" name="data" class="Azul" value="%">
+            <input type="button" name="data" class="Azul" value="√">
+            <input type="button" name="data" class="Azul" value="**">
 
             <br>
 
-            <input type="button" class="Verde" value="CE">
-            <input type="button" class="Verde" value="C">
-            <input type="button" class="Verde" value="B">
-            <input type="button" class="Azul" value="/">
+            <input type="button" name="data" class="Verde" value="CE">
+            <input type="button" name="data" class="Verde" value="C">
+            <input type="button" name="data" class="Verde" value="B">
+            <input type="button" name="data" class="Azul" value="/">
 
             <br>
 
-            <input type="button" class="Gris" value="7">
-            <input type="button" class="Gris" value="8">
-            <input type="button" class="Gris" value="9">
-            <input type="button" class="Gris" value="x">
+            <input type="button" name="data" class="Gris" value="7">
+            <input type="button" name="data" class="Gris" value="8">
+            <input type="button" name="data" class="Gris" value="9">
+            <input type="button" name="data" class="Azul" value="*">
 
             <br>
 
-            <input type="button" class="Gris" value="4">
-            <input type="button" class="Gris" value="5">
-            <input type="button" class="Gris" value="6">
-            <input type="button" class="Azul"  value="-">
+            <input type="button" name="data" class="Gris" value="4">
+            <input type="button" name="data" class="Gris" value="5">
+            <input type="button" name="data" class="Gris" value="6">
+            <input type="button" name="data" class="Azul"  value="-">
 
             <br>
 
-            <input type="button" class="Gris"value="1">
-            <input type="button" class="Gris" value="2">
-            <input type="button" class="Gris" value="3">
-            <input type="button" class="Azul" value="+">
+            <input type="button" name="data" class="Gris"value="1">
+            <input type="button" name="data" class="Gris" value="2">
+            <input type="button" name="data" class="Gris" value="3">
+            <input type="button" name="data" class="Azul" value="+">
 
             <br>
 
-            <input type="button" class="Verde" value="±">
-            <input type="button" class="Gris" value="0">
-            <input type="button" class="Azul" value=".">
-            <input type="button" class="Verde" value="=">
+            <input type="button" name="data" class="Verde" value="±">
+            <input type="button" name="data" class="Gris" value="0">
+            <input type="button" name="data" class="Azul" value=".">
+            <input type="button" name="data" class="Verde" value="=">
 
         </form>
     </div>
 </body>
 
-<script src="Calc18100149.js"></script>
+
 
 </html>
