--- a/Unidad01/04/18100157/Index.html
+++ b/Unidad01/04/18100157/Index.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <script defer src="calculadora.js"></script>
     <title>Calculadora</title>
 </head>
 <body id="body">
@@ -53,6 +52,11 @@
             <input type="button" name="nume" value="=">
         </div>
     </div>
+        <div id="Historial_Contenedor">
+            <h1>Historial: </h1>
+            <div id="History"></div>
+        </div>
+    </div>
 </body>
-
+<script src="calculadora.js"></script>
 </html>
