--- a/Unidad01/04/index.html
+++ b/Unidad01/04/index.html
@@ -30,7 +30,7 @@
 
 
                 <button name="numero" value="%">%</button>
-                <button name ="numero" value=CE">CE</button>
+                <button name ="numero" value="CE">CE</button>
                 <button name ="numero" value="C">C </button>
                 <button name ="numero" value="&Larr;">&larr;</button>
     
