--- a/Unidad01/04/index.html
+++ b/Unidad01/04/index.html
@@ -15,13 +15,28 @@
 <body id="body">
 
     <div class="container">
+
+        <div class="history">
+
+            <div class="display2">
+
+                <input type="text" id="his" placeholder="Historial">
+                <input type="histo" id="his2">
+
+            </div>
+
+
+
+
+        </div>
+
+
         <div class="calculadora">
             <div class="display">
 
-                <!-- <div id="historial"></div>
-                <div id="valor"></div> -->
-                    <input type="text" id="txt1">
-                    <input type="text" id="txt2">
+                
+                <input type="text" id="txt1">
+                <input type="text" id="txt2">
 
 
 
@@ -32,7 +47,7 @@
                 <button name="numero" value="%">%</button>
                 <button name ="numero" value="CE">CE</button>
                 <button name ="numero" value="C">C </button>
-                <button name ="numero" value="&Larr;">&larr;</button>
+                <button name ="numero" value="←">&larr;</button>
     
                 <button name="numero" value="1/x">1/x</button>
                 <button name="numero" value="^">x&sup2;</button>
