--- a/Unidad01/04/18100157/Index.html
+++ b/Unidad01/04/18100157/Index.html
@@ -17,12 +17,12 @@
         </div>
         <div class="Linea">
             <input type="button" value="%">
-            <input type="button" value="CE">
+            <input type="button" name="nume" value="CE">
             <input type="button" name="nume" value="C">
-            <input type="button" value="B">
+            <input type="button" name="nume" value="B">
         </div>
         <div class="Linea">
-            <input type="button" value="1/x">
+            <input type="button" name="name" value="1/x">
             <input type="button" name="nume" value="^">
             <input type="button" name="nume" value="√">
             <input type="button" name="nume" value="/">
@@ -46,7 +46,7 @@
             <input type="button" name="nume" value="+">
         </div>
         <div class="Linea">
-            <input type="button" value="+/-">
+            <input type="button" name="nume" value="+/-">
             <input type="button" name="nume" value="0">
             <input type="button" name="nume" value=".">
             <input type="button" name="nume" value="=">
