--- a/Unidad01/04/index.html
+++ b/Unidad01/04/index.html
@@ -18,10 +18,16 @@
 
         <div class="history">
 
-            <div class="display2">
+            <div id="display2">
 
-                <input type="text" id="his" placeholder="Historial">
-                <input type="histo" id="his2">
+                <!-- <input type="text" id="his" placeholder="Historial"> -->
+                <!-- <input type="histo" id="his2"> -->
+
+
+
+
+
+
 
             </div>
 
