--- a/Unidad01/04/18100157/Index.html
+++ b/Unidad01/04/18100157/Index.html
@@ -16,13 +16,13 @@
         <input type="text" id="num2" readonly>
         </div>
         <div class="Linea">
-            <input type="button" value="%">
+            <input type="button" name="nume" value="%">
             <input type="button" name="nume" value="CE">
             <input type="button" name="nume" value="C">
             <input type="button" name="nume" value="B">
         </div>
         <div class="Linea">
-            <input type="button" name="name" value="1/x">
+            <input type="button" name="nume" value="1/x">
             <input type="button" name="nume" value="^">
             <input type="button" name="nume" value="√">
             <input type="button" name="nume" value="/">
