--- a/Unidad01/04/18100149/Calc18100149.html
+++ b/Unidad01/04/18100149/Calc18100149.html
@@ -58,7 +58,7 @@
 
                 <br>
 
-                <input type="button" name="data-tOp" class="Verde" value="±">
+                <input type="button" name="data-tOp" class="Azul" value="±">
                 <input type="button" name="data-number" class="Gris" value="0">
                 <input type="button" name="data-tOp" class="Azul" value=".">
                 <input type="button" name="data-tOp" class="Verde" value="=">
