--- a/Unidad01/05/18100157/Index.html
+++ b/Unidad01/05/18100157/Index.html
@@ -18,6 +18,7 @@
     <input type="range" id="alpha" min="0" max="100">
     <span id="Salpha"></span>
     <input type="color" value="#FFFFFF" id="color">
+    <input type="text" id="inHexa">
 </body>
 </html>
 <script src="Cambiar.js"></script>
