--- a/Unidad01/05/18100149/18100149-color.html
+++ b/Unidad01/05/18100149/18100149-color.html
@@ -19,6 +19,7 @@
     <input type="range" id="alpha" min="0" max="100">
     <span id="spAlpha"></span>
     <input type="color" value="#ffffff" id="Paleta">
+    <input type="text" id="text">
 
 </body>
 </html>
