--- a/Unidad01/05/18100165/colorPantalla.html
+++ b/Unidad01/05/18100165/colorPantalla.html
@@ -7,12 +7,17 @@
 
 </head>
 
-<body>
-    <div id="cont">
+<body id="cont">
+    <div >
         <input type="range" id="blue" min="0" max="254">
+        <span id="Sblue"></span>
         <input type="range" id="red" min="0" max="254">
+        <span id="Sred"></span>
         <input type="range" id="green" min="0" max="254">
+        <span id="Sgreen"></span>
         <input type="range" id="alpha" min="0" max="100">
+        <span id="Salpha"></span>
+        <input type="color" value="#FFFFFF" id="color">
     </div>
 </body>
 
