--- a/Unidad01/05/ejemplo/index.html
+++ b/Unidad01/05/ejemplo/index.html
@@ -7,10 +7,13 @@
     <script src="color.js" type="text/javascript" defer></script>
 </head>
 <body  style="background-image: url(https://image.shutterstock.com/image-photo/old-brick-black-color-wall-260nw-1605128917.jpg);">
-    
-        <div id="contenedor">
-            contenedor
-         </div>
+    <input id="range" type="range" value="0"/>
+    <input type="color" id="color"   value="#e66465">
+    <div id="contenedor">
+        contenedor
+
+    </div>
+
     
 </body>
 </html>
