--- a/Unidad03/01/18100149/WEB/index.html
+++ b/Unidad03/01/18100149/WEB/index.html
@@ -15,7 +15,7 @@
         <input id="Boton" class="btn" type="button" value="Enviar">
         <h2>Ingresa una fecha:</h2>
         <input type="datetime-local" id="FechaLocal">
-        <h2>Ingresa la fecha a calcular</h2>
+        <h2>Ingresa la fecha a calcular:</h2>
         <input type="datetime-local" id="FechaLocal2">
         <input id="Boton2" type="button" class="btn" value="Enviar">
         <h1 id="fechat"></h1>
