--- a/Unidad03/01/18100145/WEB/index.html
+++ b/Unidad03/01/18100145/WEB/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-   <h1 id="result">RESULT</h1>
+   
+   <h1 id="Hola"></h1>
+   <h1 id="NumeroTexto"></h1>
+   <h1 id="fecha"></h1>
+
 </body>
 
 </html>
